kubernetes-files/student-api-deployment.yaml
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-api
  namespace: student-namespace
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0 # had to make it zero as only small amount of cpu is there, so creating extra pod giving issues
  selector:
    matchLabels:
      app: student-api
  template:
    metadata:
      labels:
        app: student-api
    spec:
      containers:
        - name: student-api
          image: devanurag/student-info:v6
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "50m" # reduced cpu request to allow provisioning of pods with small cpu limit
              memory: "256Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"
