kubernetes-files/student-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-api-service
  namespace: student-namespace
spec:
  type: ClusterIP
  selector:
    app: student-api
  ports:
    - port: 80
      targetPort: 8080
